# machine_learning_projects

.github/: ci_ut.yml
.github/workflows/: ci_ut.yml
boiling_point/: CRC_SMILES.csv  CRC_handbook.csv  CRC_handbook_raw.csv  README.md  SMILEStoBoilingpoint.ipynb
clip/: README.md  pyproject.toml
clip/clip/: constant.py  loss.py  model.py  trainer.py
clip/clip/data/: dataset.py
clip/clip/image/: vit.py
clip/clip/languange/: gpt.py
clip/tests/: conftest.py  test_model.py
clip/tests/data/: test_dataset.py
clip/tests/image/: test_vit.py
clip/tests/language/: test_gpt.py
diffusion/: pyproject.toml
diffusion/diffusion/: __init__.py  diffusion.py  diffusion_wrap.py  train.py  unet.py
diffusion/diffusion/data/: dataset.py
diffusion/tests/: test_diffusion.py  test_unet.py
dl_teaching/: README.md  pyproject.toml
dl_teaching/bert/: dataset.py  model.py  trainer.py
dl_teaching/gpt/: model.py
dl_teaching/transformers/: decoder.py  embedding.py  encoder.py  multi_head_attention.py  positional_encoding.py
ml_teaching/: README.md
oil_blending/: ML approach.ipynb  X.csv  basemode.py  reportId.csv  y.csv
