[tool.poetry]
name = "clip"
version = "0.1.0"
description = ""
authors = ["Anyang Peng"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.3.1"
pytest = "^8.2.2"
einops = "^0.8.0"
tiktoken = "^0.7.0"
numpy = "^2.0.0"
black = "^24.4.2"
pytest-cov = "^5.0.0"
img2dataset = "^1.45.0"
torchvision = "^0.18.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
