[tool.poetry]
name = "diffusion"
version = "0.1.0"
description = ""
authors = ["Anyang Peng"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.4.0"
pytest = "^8.3.2"
numpy = "^2.0.1"
torchvision = "^0.19.0"
pillow = "^10.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
